--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Hi everyone</h1>
+    <h2>Subtitle</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste vitae dicta, alias obcaecati consequuntur quis quae
         aperiam tenetur maiores. Placeat, nesciunt fugit. Voluptatibus non optio, facere minus quia tempora esse.</p>
 </body>
